--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,5 +1,20 @@
+.slider{
+    margin-top: 200px;
+    background-image: url('css-images/haikei.jpg');
+    background-size: cover ;
+    opacity: 0.8;
+}
+
 /* pc */
 @media (min-width:1021px) {
+    #infoTitle{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        margin-bottom: 100px;
+    }
+
     .sliderBtn{
         position: absolute;
         z-index: 1;
@@ -27,7 +42,7 @@
         margin: auto;
         display: flex;
         position: relative;
-        z-index: -1;
+        z-index: 0;
         width: 710px;
         height: 550px;
         overflow: hidden;
