--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  background-image: url('css-images/mainbackground.png');
-  background-size: cover;
+  background-image: url('css-images/pc-background.jpg');
+  background-size:contain;
 }
 
 ul,
@@ -19,7 +19,7 @@ li {
 
 .fHeader {
   padding-top: 20px;
-  height: 8%;
+  height: 10%;
   line-height: normal;
   width: 100%;
   background-image: url('css-images/header-1.png');
@@ -28,8 +28,13 @@ li {
   align-items: center;
   position: fixed;
   z-index: 1000;
-  padding-bottom: 20px;
   box-shadow: 0 1px 0 0 grey;
+}
+
+#logo{
+  width: 15%;
+  margin-top: -2%;
+  margin-right: 30%;
 }
 
 .fHeader a {
@@ -48,7 +53,7 @@ li {
   margin-right: 40px;
 }
 
-header .button {
+header .button{
   background: #eddb22;
   width: 150px;
   height: 50px;
@@ -59,6 +64,7 @@ header .button {
   font-weight: bold;
   text-decoration: none;
   transition: 300ms;
+  margin-right: 5%;
 }
 
 header .button:hover {
@@ -330,37 +336,52 @@ header .button:hover {
 }
 
 /* ツイッタータイムライン */
+#twitter{
+  width: 100%;
+  display: block;
+  margin-top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url('css-images/mainbackground.png');
+  background-size: cover;
+  opacity: 0.8;
+}
+
+.blur{
+  width: 100%;
+  height: 100%;
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+}
+
+#twitterTitle{
+  display: block;
+  padding-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  margin-bottom: 50px;
+}
+
 .twitter-timeline {
-  margin-left: 20%;
+  position: relative;
+  z-index: 1;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 50px;
 }
 
+/* あらすじ */
+#storyTitle{
+  display: block;
+  padding-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  margin-bottom: 50px;
+}
 /* ニュースページ */
-.display-posts-listing.grid {
-  display: grid;
-  grid-gap: 16px;
-}
-
-.display-posts-listing.grid .title {
-  display: block;
-}
-
-.display-posts-listing.grid img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-@media (min-width: 600px) {
-  .display-posts-listing.grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (min-width: 1024px) {
-  .display-posts-listing.grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
 
 /* フッター */
 footer{
