--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -71,6 +71,14 @@
 
 /* タブレット */
 @media only screen and (max-width: 1020px) and (min-width: 768px){
+    #infoTitle{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        margin-bottom: 100px;
+    }
+
     .sliderBtn{
         position: absolute;
         z-index: 1;
@@ -123,6 +131,14 @@
 
 /* スマホ */
 @media only screen and (max-width: 767px) {
+    #infoTitle{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        margin-bottom: 100px;
+    }
+
     .sliderBtn{
         position: absolute;
         z-index: 1;
