--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,6 +1,6 @@
 .slider{
     margin-top: 200px;
-    background-image: url('css-images/haikei.jpg');
+    background-image: url('css-images/shrine2.jpg');
     background-size: cover ;
     opacity: 0.8;
 }
