--- a/assets/css/deco.css
+++ b/assets/css/deco.css
@@ -25,6 +25,65 @@
     animation-delay: 4s;
 }
 
+#sparkbefore{
+    width: 25px;
+    height: auto;
+    position: fixed;
+    z-index: -2;
+    top: 30%;
+    left: 15%;
+}
+
+#sparkafter{
+    width: 25px;
+    height: auto;
+    position: fixed;
+    z-index: -1;
+    top: 30%;
+    left: 15%;
+    animation: spark 10s infinite;
+}
+
+#sparkbefore2{
+    width: 15px;
+    height: auto;
+    position: fixed;
+    z-index: -2;
+    top: 65%;
+    right: 20%;
+}
+
+#sparkafter2{
+    width: 15px;
+    height: auto;
+    position: fixed;
+    z-index: -1;
+    top: 65%;
+    right: 20%;
+    animation: spark 10s infinite;
+    animation-delay: 3s;
+}
+
+#sparkbefore3{
+    width: 20px;
+    height: auto;
+    position: fixed;
+    z-index: -2;
+    top: 90%;
+    left: 5%;
+}
+
+#sparkafter3{
+    width: 20px;
+    height: auto;
+    position: fixed;
+    z-index: -1;
+    top: 90%;
+    left: 5%;
+    animation: spark 10s infinite;
+    animation-delay: 4s;
+}
+
 @keyframes ryusei1{
     0%{
         left: -250%;
@@ -46,3 +105,18 @@
         top: 260%;
     }
 }
+
+@keyframes spark{
+    0%{
+        opacity: 1;
+    }
+
+    50%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
