--- a/assets/css/character.css
+++ b/assets/css/character.css
@@ -3,9 +3,18 @@ body{
     padding: 0;
 }
 
+.blur{
+    width: 100%;
+    height: 100%;
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
+  }
+
 #hero{
     height: 920px;
-    background-color: red;
+    background-image: url('css-images/shrine2.jpg');
+    background-size: cover ;
+    opacity: 0.8;
 }
 
 .chara{
@@ -40,9 +49,23 @@ body{
     background-color: orange;
 }
 
+#heroine{
+    height: 920px;
+    background-image: url('css-images/castlepond.jpg');
+    background-size: cover ;
+    opacity: 0.8;
+}
+
 #heroineName{
     width: 70%;
     height: 15px;
     font-size: 15px;
     border-bottom: gray solid 2px;
+}
+
+#boss{
+    height: 920px;
+    background-image: url('css-images/sightseeing.jpg');
+    background-size: cover ;
+    opacity: 0.8;
 }
