--- a/assets/css/character.css
+++ b/assets/css/character.css
@@ -26,6 +26,7 @@ body::-webkit-scrollbar{
     float: left;
     z-index: 5;
     position: relative;
+    overflow: hidden;
 }
 
 .wipePos{
@@ -155,4 +156,21 @@ body::-webkit-scrollbar{
     background-size: cover;
     width: 100%;
     aspect-ratio: 16/9;
+}
+
+#bossIntro li{
+    margin-left: 400px;
+    color: darkblue;
+    text-shadow: 0.5px 0.5px rgb(191, 189, 189);
+    font-size: 40px;
+    margin-bottom: 0;
+}
+
+#bossName{
+    width: 25%;
+    height: auto;
+}
+
+#bg3{
+    background-color: rgb(86, 84, 113);
 }
