--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -11,16 +11,10 @@ footer{
     border-radius: 10%;
   }
   
-  #aicon{
+  .icon{
     width: 50px;
     height: 50px;
     border-radius:50%;
-  }
-  
-  footer img{
-    width: 100px;
-    height: 50px;
-    border-radius: 10px;
   }
   
   footer ul{
