--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,6 +1,6 @@
 .slider{
     margin-top: 200px;
-    background-image: url('css-images/shrine2.jpg');
+    background-image: url('css-images/sightseeing.jpg');
     background-size: cover ;
     opacity: 0.8;
 }
@@ -17,7 +17,7 @@
 
     .sliderBtn{
         position: absolute;
-        z-index: 1;
+        z-index: 0;
         width: 100%;
         height: 450px;
         display: flex;  
