--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -6,11 +6,24 @@ footer{
     text-align: center;
   }
   
-  #map iframe{
-    margin-top: 50px;
-    border-radius: 10%;
+  @media only screen and (min-width: 768px) {
+    #map iframe{
+      margin-top: 50px;
+      border-radius: 10%;
+      width: 400px;
+      height: 300px;
+    }  
   }
-  
+
+  @media only screen and (max-width: 767px) {
+    #map iframe{
+      margin-top: 50px;
+      border-radius: 10%;
+      width: 300px;
+      height: 300px;
+    }  
+  }
+
   .icon{
     width: 50px;
     height: 50px;
