--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,12 +1,12 @@
-.slider{
-    margin-top: 200px;
-    background-image: url('css-images/sightseeing.jpg');
-    background-size: cover ;
-    opacity: 0.8;
-}
-
 /* pc */
 @media (min-width:1021px) {
+    .slider{
+        margin-top: 200px;
+        background-image: url('css-images/sightseeing.jpg');
+        background-size: cover ;
+        opacity: 0.8;
+    }    
+
     #infoTitle{
         display: block;
         margin-left: auto;
@@ -19,13 +19,20 @@
         position: absolute;
         z-index: 0;
         width: 100%;
-        height: 450px;
-        display: flex;  
+        height: 393.5px;
+        display: flex;
+        align-items: center;
+    }
+
+    #prevBtn{
+        margin-left: 0;
     }
 
     #prevBtn img{
-        margin-left:50px;
-        height: 100%;
+        position: relative;
+        margin-left:70px;
+        height: 250px;
+        width: auto;
         transform: rotateY(-180deg);
     }
 
@@ -34,8 +41,9 @@
     }
 
     #nextBtn img{
-        margin-right: 50px;
-        height: 100%;
+        margin-right: 70px;
+        height: 250px;
+        width: auto;
     }
 
     .carousel-wrapper{
@@ -63,7 +71,6 @@
     .carousel-area li img{
         width: 700px;
         aspect-ratio: 16/9;
-        border: gray solid 5px;
         border-radius: 20px;
     }
 }
@@ -81,7 +88,7 @@
 
     .sliderBtn{
         position: absolute;
-        z-index: 1;
+        z-index: 0;
         width: 100%;
         height: 300px;
         display: flex;  
@@ -106,7 +113,7 @@
         margin: auto;
         display: flex;
         position: relative;
-        z-index: -1;
+        z-index: 0;
         width: 500px;
         height: 300px;
         overflow: hidden;
@@ -114,11 +121,11 @@
 
     .carousel-area{
         display: flex;
-        width: 6000px;
+        width: 10000px;
     }
 
     .carousel-area li{
-        margin-right: 700px;
+        margin-right: 900px;
         width: 500px;
         aspect-ratio: 16/9;
     }
@@ -131,58 +138,84 @@
 
 /* スマホ */
 @media only screen and (max-width: 767px) {
+    .slider{
+        margin-top: 30px;
+        background-image: url('css-images/sightseeing.jpg');
+        background-size: cover ;
+        opacity: 0.8;
+        overflow: hidden;
+    }    
+
     #infoTitle{
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 40%;
-        margin-bottom: 100px;
+        width: 80%;
+        margin-bottom: 30px;
     }
 
     .sliderBtn{
         position: absolute;
-        z-index: 1;
         width: 100%;
-        height: 100px;
-        display: flex;  
+        height: 151.88px;
+        display: flex;
+        align-items: center;
+    }
+
+    #prevBtn{
+        position: relative;
+        z-index: 1;
+        margin-right: 0;
     }
 
     #prevBtn img{
-        margin-left:30px;
-        height: 100%;
+        margin-left:10px;
+        margin-right: 0;
+        height: 70px;
+        width: auto;
         transform: rotateY(-180deg);
-        margin-top: 10px;
     }
 
     #nextBtn{
+        position: relative;
+        z-index: 1;
         margin: 0 0 0 auto;
     }
 
     #nextBtn img{
-        margin-right: 35px;
-        height: 100%;
-        margin-top: 10px;
+        height: 70px;
+        width: auto;
+        margin-left: 0;
+        margin-right: 10px;
     }
 
     .carousel-wrapper{
         margin: auto;
         display: flex;
         position: relative;
-        z-index: -1;
-        width: 220px;
+        z-index: 0;
+        width: 320px;
         height: 200px;
         overflow: hidden;
     }
 
     .carousel-area{
+        margin-left: 12px;
+        margin-right: 0;
         display: flex;
-        width: 6000px;
-        transform: translateX(-30px);
+        width: 10000px;
+        transform: translateX(-10px);
+    }
+
+    .carousel-area li{
+        margin-right: 1160px;
+        width: 240px;
+        aspect-ratio: 16/9;
     }
 
     .carousel-area li img{
-        margin-right: 300px;
-        width: 220px;
+        width: 240px;
         aspect-ratio: 16/9;
+        border-radius: 20px;
     }
 }
