--- a/assets/css/staff.css
+++ b/assets/css/staff.css
@@ -1,64 +1,133 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url('css-images/staffBackground.png');
+    background-image: url('css-images/staffBackground.jpg');
     background-size: cover;
     font-family: "游明朝", "YuMincho", "ヒラギノ明朝 Pro W3", "Hiragino Mincho Pro", "ＭＳ Ｐ明朝", "MS PMincho", serif;
     color: white;
 }
-
-#backHome{
-    font-size: 20px;
-    color: white;
-    position: fixed;
-    z-index: 100;
-    margin-left: 10px;
-   }
-
-main{
-    background-color: rgb(0, 0, 0,0.4);
-    text-align: center;
+@media only screen and (min-width:768px) {
+    #backHome{
+        font-size: 20px;
+        color: white;
+        position: fixed;
+        z-index: 100;
+        margin-left: 10px;
+       }
+    
+    main{
+        background-color: rgb(0, 0, 0,0.4);
+        text-align: center;
+    }
+    
+    ul{
+        margin-left: -25px;
+        list-style: none;
+        text-align: center;
+    }
+    
+    h1{
+        width: 100%;
+        margin-top: 0;
+    }
+    
+    h2{
+        margin-top: 100px;
+        width: 70%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    h3{
+        width: 20%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    li{
+        font-size: 25px;
+        color: rgb(228, 228, 228);
+    }
+    
+    .role{
+        font-size: 50px;
+        color: brown;
+        border-bottom: rgb(134, 33, 33) 2px solid;
+    }
+    
+    .manager{
+        font-size: 35px;
+        color: rgb(255, 255, 255);
+        background: linear-gradient(transparent 30%, rgb(167, 166, 166) 80%);
+    }
+    
+    #lastList{
+        padding-bottom: 100px;
+    }
+    
 }
 
-ul{
-    list-style: none;
-}
-
-h1{
-    margin-top: 0;
-}
-
-h2{
-    margin-top: 100px;
-    width: 70%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-h3{
-    width: 20%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-li{
-    font-size: 25px;
-    color: rgb(228, 228, 228);
-}
-
-.role{
-    font-size: 50px;
-    color: brown;
-    border-bottom: rgb(134, 33, 33) 2px solid;
-}
-
-.manager{
-    font-size: 35px;
-    color: rgb(255, 255, 255);
-    background: linear-gradient(transparent 30%, rgb(167, 166, 166) 80%);
-}
-
-#lastList{
-    padding-bottom: 100px;
+@media only screen and (max-width:767px) {
+    #backHome{
+        font-size: 15px;
+        color: white;
+        position: fixed;
+        z-index: 100;
+        margin-left: 10px;
+       }
+    
+    main{
+        background-color: rgb(0, 0, 0,0.4);
+        text-align: center;
+    }
+    
+    ul{
+        list-style: none;
+        text-align: center;
+        display: block;
+        margin-left: -30px;
+    }
+    
+    h1{
+        margin-top: 0;
+        font-size: 50px;
+    }
+    
+    h2{
+        margin-top: 100px;
+        width: 90%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    h3{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    main > li{
+        width: 60%;
+        font-size: 15px;
+        color: rgb(228, 228, 228);
+    }
+    
+    .role{
+        font-size: 25px;
+        color: brown;
+        border-bottom: rgb(134, 33, 33) 2px solid;
+    }
+    
+    .manager{
+        font-size: 20px;
+        color: rgb(255, 255, 255);
+        background: linear-gradient(transparent 30%, rgb(167, 166, 166) 80%);
+    }
+    
+    #lastList{
+        padding-bottom: 100px;
+    }
+    
 }
